recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: not found: value angke
    tree(steps-1, shrink*length,angke, shrink)
                                ^