recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps == 0){
    
  }
  else {
    avance(length)
    droite(angle)
    current(steps)
    tree(steps-1, shrink*length,angke, shrink)
    
  }
  
}